add group membership assignment info to org invite email notification
Signed-off-by: Bogdan Mitrović <bogdan.mitrovic@mainflux.com>

--- a/docker/templates/auth/org_invite.tmpl
+++ b/docker/templates/auth/org_invite.tmpl
@@ -6,6 +6,16 @@
     <p class="mb-8"><strong>Organization:</strong> {{ .OrgName }}</p>
     <p class="mb-16"><strong>Role:</strong> {{ .Role }}</p>
 
+    {{ if .Groups }}
+        By accepting the invite, you will additionally be granted access to the following Groups within the Organization:
+
+        <ul>
+            {{ range $name, $role := .Groups }}
+                <li><strong>{{ $name }}</strong>: {{ $role }}</li>
+            {{ end }}
+        </ul>
+    {{ end }}
+
     <p class="btn-wrapper">
         <a href="{{ .InviteLink }}" class="btn">View Invitation</a>
     </p>
